分组及分组-服务绑定适配 project_id
